--- a/about-pages-dark.css
+++ b/about-pages-dark.css
@@ -12,6 +12,8 @@
  *     about:privatebrowsing
  *     about:sessionrestore
  *     about:neterror
+ *
+ *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 @-moz-document
