--- a/jshint-wide.css
+++ b/jshint-wide.css
@@ -4,7 +4,9 @@
  * @author Niklas Gollenstede
  * @licence CC-BY-SA-4.0 or MIT
  * @description
- *    Makes the code and error sections on the JSHint main page use the whole screen (at any resolution).
+ *     Makes the code and error sections on the JSHint main page use the whole screen (at any resolution).
+ *
+ *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 @namespace url(http://www.w3.org/1999/xhtml);
