--- a/scrollbars-hovering-dark.css
+++ b/scrollbars-hovering-dark.css
@@ -7,6 +7,8 @@
  *     Small, grey transparent, hovering scrollbars for dark themes.
  *     Based on https://userstyles.org/styles/83431/minimal-floating-scrollbars-for-firefox-windows.
  *     You may have to reload some pages after applying this style.
+ *
+ *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 /* AGENT_SHEET */ /* needed for scrollbars */
