--- a/stud-ip-dark.css
+++ b/stud-ip-dark.css
@@ -6,6 +6,8 @@
  * @description
  *     Dark grey/black theme for Stud.IP with red elements.
  *     I only applied a few personal changes and updates for a newer version of Stud.IP to https://userstyles.org/styles/101211/ostfalia-studip-dark, most credit for this theme goes to CaiusCaligulaCC
+ *
+ *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 @namespace url(http://www.w3.org/1999/xhtml);
