--- a/tabview-dark.css
+++ b/tabview-dark.css
@@ -4,7 +4,9 @@
  * @author Niklas Gollenstede
  * @licence CC-BY-SA-4.0 or MIT
  * @description
- *      Dark and a bit more modern look for the "Group Tabs"-overview.
+ *     Dark and a bit more modern look for the "Group Tabs"-overview.
+ *
+ *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 @-moz-document
