--- a/thunderbird-dark.css
+++ b/thunderbird-dark.css
@@ -1,10 +1,12 @@
 /**
  * @name Thunderbird Dark
- * @stylish-id <none>
+ * @stylish-id 119670
  * @author Niklas Gollenstede
  * @licence CC-BY-SA-4.0 or MIT
  * @description
  *     Dark theme for Thunderbirds main UI.
+ *
+ *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 @-moz-document
