--- a/userstyles-org-inverted.css
+++ b/userstyles-org-inverted.css
@@ -6,6 +6,8 @@
  * @deprecated I personally don't use this theme anymore and won't continue its maintainance.
  * @description
  *     Very simple colour inversion. Looks a bit old fashioned, but everything is perfectly dark and readable.
+ *
+ *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 @namespace url(http://www.w3.org/1999/xhtml);
