--- a/developer-edition-dark.css
+++ b/developer-edition-dark.css
@@ -1,11 +1,13 @@
 /**
  * @name Developer Edition Dark
- * @stylish-id <none>
+ * @stylish-id 119664
  * @author Niklas Gollenstede
  * @licence CC-BY-SA-4.0 or MIT
  * @description
  *     Slight rework of the dark Developer Edition theme of Firefox.
  *     Also works in normal Firefox and even Thunderbird.
+ *
+ *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
