--- a/context-menu-cleanup.css
+++ b/context-menu-cleanup.css
@@ -31,16 +31,20 @@ menu[label~="QuickFox"],
 menu[label~="Quickfox"],
 menuitem[label~="Report"],
 menuitem[label~="dTa"],
-menuitem[label="DownThemAll!..."]{
+menuitem[label="DownThemAll!..."],
+menuitem[disabled="true"]
+{
     display: none;
 }
 
 #context-openlinkintab,
-#context-viewimage {
+#context-viewimage
+{
     height: 35px;
 }
 
-menuseparator {
+menuseparator
+{
     -moz-appearance: none;
     height: 1px;
     margin: 0px;
