--- a/raw-text-dark.css
+++ b/raw-text-dark.css
@@ -4,22 +4,35 @@
  * @author Niklas Gollenstede
  * @licence CC-BY-SA-4.0 or MIT
  * @description
- *     Turns the backround of raw text opened in Firefox black, and the text itself white.
+ *     Turns the backround of raw text and html opened in Firefox dark, and the text itself white.
  *
  *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
 
 @namespace url(http://www.w3.org/1999/xhtml);
 
-body>pre:only-child {
-    filter: invert(100%) hue-rotate(180deg) brightness(300%);
-    background: white;
-    padding: 15px;
-    font-size: 16px;
+body>pre:first-child {
+}
+body:not(.highlight)>pre:first-child {
+    filter: invert(100%) hue-rotate(180deg) contrast(90%) saturate(200%) brightness(125%);
+    background-color: #E6E9EC; /* inspector body color filtered */
+    padding: 10px;
+    margin: -8px;
+}
+body#viewsource.highlight>pre {
+    filter: invert(100%) hue-rotate(180deg) contrast(90%) saturate(200%) brightness(125%);
+    background-color: #E6E9EC; /* inspector body color filtered */
     position: fixed;
     top: 0px;
     left: 0px;
-    height: 100%;
-    width: 100%;
+    bottom: 0px;
+    right: 0px;
     overflow: scroll;
+    margin: 0px;
+    padding: 10px 50px;
+}
+pre[id]:before,
+span[id]:before
+{
+    color: #25ffc9;
 }
