--- a/about-pages-dark.css
+++ b/about-pages-dark.css
@@ -4,14 +4,7 @@
  * @author Niklas Gollenstede
  * @licence CC-BY-SA-4.0 or MIT
  * @description
- *     Color theme, turns the major about:-Pages dark:
- *     about:blank
- *     about:config
- *     about:addons
- *     about:newtab
- *     about:privatebrowsing
- *     about:sessionrestore
- *     about:neterror
+ *     Color theme, turns pretty much all the standard and some add-on about:-pages dark.
  *
  *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
