--- a/context-menu-cleanup.css
+++ b/context-menu-cleanup.css
@@ -11,36 +11,70 @@
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
-#context-bookmarklink,
-#context-sendlink,
-#context-sendimage,
-#context-sep-copylink,
-#context-setWallpaper,
-#context-setDesktopBackground,
-#context-back,
-#context-forward,
-#context-reload,
-#context-stop,
-#context-sep-stop,
-#context-bookmarkpage,
-#context-savepage,
-#context-viewsource,
-#context-viewinfo,
-menuitem[label~="FoxySpider"],
-menu[label~="QuickFox"],
-menu[label~="Quickfox"],
-menuitem[label~="Report"],
-menuitem[label~="dTa"],
-menuitem[label="DownThemAll!..."],
+@-moz-document
+    url(chrome://browser/content/browser.xul)
+{
+
+    #context-bookmarklink,
+    #context-sendimage,
+    #context-sep-copylink,
+    #context-setWallpaper,
+    #context-setDesktopBackground,
+
+    #context-back,
+    #context-forward,
+    #context-reload,
+    #context-stop,
+    #context-sep-stop,
+
+    #context-selectall,
+
+    #context-sendlink,
+    #context-bookmarkpage,
+    #context-savepage,
+
+    #context-viewsource,
+    #context-viewpartialsource-selection,
+    #context-viewinfo,
+
+    #dtaCtxSepFront-direct,
+    .dta-menuitem.dta-turbo
+    {
+        display: none;
+    }
+
+    #context-openlinkintab,
+    #context-viewimage
+    {
+        height: 2.3em;
+        font-weight: bold;
+    }
+
+}
+@-moz-document
+    url(chrome://lastpass/content/home2.xul)
+{
+
+    #rightclickmenu menuitem:nth-child(4),
+    #rightclickmenu menuitem:nth-child(5),
+    #rightclickmenu menuitem:nth-child(6),
+    #rightclickmenu menuitem:nth-child(7)
+    {
+        display: none;
+    }
+
+    #rightclickmenu menuitem:nth-child(8)
+    {
+        height: 2.3em;
+        font-weight: bold;
+    }
+
+}
+
+
 menuitem[disabled="true"]
 {
     display: none;
-}
-
-#context-openlinkintab,
-#context-viewimage
-{
-    height: 35px;
 }
 
 menuseparator
