fix about:privatebrowsing for FF 48, see #3

--- a/about-pages-dark.css
+++ b/about-pages-dark.css
@@ -57,6 +57,7 @@
 @-moz-document
     url(about:about),
     url(about:crashes),
+    url(about:privatebrowsing),
     url(about:rights),
     url(about:support),
     url(about:sync-log),
