--- a/tabview-dark.css
+++ b/tabview-dark.css
@@ -15,97 +15,93 @@
     url(chrome://browser/content/tabview.html)
 {
 
-    #content
+    #content,
+    #groupSelector
     {
+        color: rgba(255, 255, 255, .8);
         background-color: #343C45;
     }
-
     .groupItem
     {
-        background-color: #14171A;
-        cursor: move;
+        background-color: rgba(20,23, 26, 1);
     }
     .groupItem:not(.activeGroupItem)
     {
-        opacity: 0.5;
+        background-color: rgba(20,23, 26, .5);
     }
-    .groupItem:not(.activeGroupItem) .appTabTrayContainer
-    {
-        display: none;
-    }
-    .groupItem .appTabTrayContainer
-    {
-        padding-right: 10px;
-    }
-    .groupItem .appTabTrayContainer .appTabIcon
-    {
-        background-image: radial-gradient(circle at center, rgba(255, 255, 255, 0.7) 30%, transparent 80%);
-        padding: 3px;
-    }
+    #searchbox,
     .groupItem .titlebar .name
     {
-        border-radius: 2px;
         box-shadow: inset 0 0 2px lightgrey;
         background-color: #193347;
         padding: 0 0 1px 3px;
-    }
-    .groupItem .close,
-    .groupItem .iq-resizable-handle
-    {
-        background-position: 50% 50%;
-        width: 30px;
-        height: 30px;
-    }
-
-    .tab
-    {
-        border-radius: 0px;
-        background-color: #414B56;
-        padding-bottom: 20px;
-    }
-    .tab.focus
-    {
-        box-shadow: unset;
-        box-shadow: 0px 0px 7px rgb(0, 126, 206), 0px 0px 7px rgb(0, 126, 206);
-    }
-    .tab .tab-title
-    {
-        background-color: inherit;
-        position: absolute;
-        left: 0px;
-        right: 0px;
-        width: auto;
-        bottom: 0px;
-        padding: 0 0 1px 4px;
         color: white;
-        text-shadow: none;
     }
-    .tab .favicon
-    {
-        background-color: transparent;
-        background-image: radial-gradient(circle at center, rgba(255, 255, 255, 0.7) 30%, transparent 70%);
-        border: none;
-        left: 2px !important;
-        top: 3px !important;
-    }
-    .tab .thumb .cached-thumb,
-    .tab .thumb canvas
-    {
-        background-color: #414B56;
-    }
-    .tab .close
-    {
-        display: none;
-    }
-    .tab:hover .close
-    {
-        display: block;
-    }
-
-    #actions
+    .create-new-plus
     {
         filter: invert(100%) hue-rotate(180deg);
     }
+
+
+    #actions .grouped,
+    #actions input
+    {
+        background-color: rgba(20,23, 26, 1);
+    }
+    #actions :not(#pinnedTabs) input,
+    #actions>input
+    {
+        filter: invert(100%) hue-rotate(180deg);
+        background-color: #E6E9EC;
+    }
+    #actions :not(#pinnedTabs) input:hover,
+    #actions>input:hover
+    {
+        background-color: #BDC5CE;
+    }
+
+    .tab-title,
+    .group-title
+    {
+        color: white;
+    }
+    .favicon-container
+    {
+        background-color: rgba(20,23, 26, .5);
+    }
+    /*
+    .tab .favicon
+    {
+        position: relative;
+        z-index: 1;
+    }
+    .tab .favicon::before
+    {
+        position: absolute;
+        z-index: -1;
+
+        content: ' ';
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-image: radial-gradient(circle at center, rgba(255, 255, 255, 0.7) 30%, transparent 80%);
+    }
+    */
+    .tab-thumb-container
+    {
+        background-color: #414B56;
+    }
+    .tab:not(:hover) .close
+    {
+        display: none;
+    }
+
+    .search-result-group
+    {
+        background-color: rgba(20,23, 26, .9);
+        color: rgba(255, 255, 255, .8);
+    }
+
 }
 
 @-moz-document
